# Rustorify

./: Cargo.toml  README.md  install.sh
data/: torrc
src/: checks.rs  cli.rs  config.rs  files.rs  firewall.rs  ipinfo.rs  lock.rs  main.rs  output.rs  tor.rs
