[package]
name = "rustorify"
version = "1.0.0"
edition = "2021"
description = "Transparent proxy through Tor — Rust edition"
license = "GPL-3.0"
authors = ["rustorify contributors"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
# Ergonomic error handling with context propagation
anyhow = "1"
# Colored terminal output
colored = "2"
# JSON serialization/deserialization (Tor circuit check API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform SIGINT/SIGTERM handler
ctrlc = { version = "3", features = ["termination"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
